# slang-hal

./: .gitignore  Cargo.toml  README.md
crates/minislang/: Cargo.toml
crates/minislang/src/: dir.rs  lib.rs
crates/slang-hal/: Cargo.toml  README.md  build.rs
crates/slang-hal-derive/: Cargo.toml
crates/slang-hal-derive/src/: lib.rs
crates/slang-hal/examples/: add.rs  buffer_readback.rs  compose.rs  encase.rs  hot_reloading.rs  overwrite.rs  timestamp_queries.rs
crates/slang-hal/examples/shaders/: add.slang
crates/slang-hal/src/: function.rs  lib.rs  shader.rs
crates/slang-hal/src/backend/: cuda.rs  mod.rs  webgpu.rs
