[workspace]
members = ["crates/minislang", "crates/slang-hal", "crates/slang-hal-derive"]
resolver = "2"

[workspace.dependencies]
nalgebra = { version = "0.34.1", features = ["convert-bytemuck", "encase"] }
bytemuck = { version = "1", features = ["derive", "extern_crate_std"] }
anyhow = "1"
async-channel = "2"
thiserror = "2"
futures = "0.3"
shader-slang = { git = "https://github.com/Vrixyz/slang-rs.git", branch = "static-build", default-features = false, features = [
    "static",
] }
shader-slang-sys = { git = "https://github.com/Vrixyz/slang-rs.git", branch = "static-build", default-features = false, features = [
    "static",
] }

# TODO: make the wgpu dependency optional too (all backends should be optional but with
#       wgpu enabled by default).
wgpu = { version = "26", features = ["naga-ir"] }
encase = "0.12"

[workspace.lints]
rust.unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("dim2", "dim3"))',
] }

[profile.release]
opt-level = 'z'

[patch.crates-io]
#encase = { path = "../encase" }
#shader-slang = { path = "../slang-rs" }
shader-slang = { git = "https://github.com/Vrixyz/slang-rs.git", branch = "static-build", default-features = false, features = [
    "static",
] }
