[package]
name = "minislang"
authors = ["Sébastien Crozet <sebcrozet@dimforge.com>"]
description = "Small wrapper around the shader-slang binding"
repository = "https://github.com/dimforge/slang-hal"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
shader-slang = { workspace = true }
shader-slang-sys = { workspace = true }
walkdir = "2"
include_dir = "0.7"
log = "0.4"
tempfile = "3"

[lints]
workspace = true
