[package]
name = "slang-hal-derive"
authors = ["Sébastien Crozet <sebcrozet@dimforge.com>"]
description = "Proc-macro for Slang shaders."
repository = "https://github.com/dimforge/slang-hal"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
name = "slang_hal_derive"
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = "2.0.77"
quote = "1.0.37"
proc-macro2 = "1.0.86"
darling = "0.20.10"